# dynamicCalibration

./: LICENSE  README.md  camera.h  cameraCalibration.cpp  detectionObject.h  main.cpp  socket.cpp
Detection/: CalibrationData.txt  MarkertransposeData.txt  RobotjointData.txt  RobotposeData.txt
URCap/: Activator.java  SendCMDProgramNodeContribution.java  SendCMDProgramNodeService.java  SendCMDProgramNodeView.java  ServerSetupProgramNodeContribution.java  ServerSetupProgramNodeService.java  ServerSetupProgramNodeView.java  ServerShutdownProgramNodeContribution.java  ServerShutdownProgramNodeService.java  Variables.java  dynamicCalibration-1.0-SNAPSHOT.urcap  pom.xml
build-src-Desktop-Debug/main_autogen/: mocs_compilation.cpp
landmarkVersion6/Detection/: MarkertransposeData.txt  RobotjointData.txt
landmarkVersion6/src/: CMakeLists.txt  RTDEInterface.h  SpinURDataInterface.cpp  camera.cpp  cameraCalibration.cpp  detectionObject.cpp  moveArm.cpp
src/: CMakeLists.txt  RTDEInterface.cpp  SpinURDataInterface.h  camera.cpp  camera.h  cameraCalibration.cpp  cameraCalibration.h  cameraConfirguration.h  cameraSettings.h  detectionCheckerboard.cpp  detectionCheckerboard.h  detectionMarker.cpp  detectionMarker.h  detectionObject.h  main.cpp  moveArm.cpp  moveArm.h  moveRobot.cpp  moveRobot.h  myHTTPClient.cpp  myHTTPClient.h  mytcpserver.cpp  mytcpserver.h  socket.cpp  socket.h  workspaceCalibration.cpp  workspaceCalibration.h
